new/theme/2020/static/scss/base.scss
/* ... */
.banner-height { height: 21.875rem; }
.lh3 { line-height: 3rem; }
.w-small {width: .5rem; }
.hv-svg-red { &:hover { fill: $button-hover; } }
.mb-products { margin-bottom: 6.25rem; }
.f-benefits { font-size: 2.375rem; }
.f-benefits-p { font-size: 1.875rem; }
.f-key-features { font-size: 1.125rem; }
.lh-key-features { line-height: 2.25rem; }
.bb-form { border-bottom: 1px solid $lightblack; }
.h-slide-bt { height: .188rem; }
.slide-bt-trans { transition: background-color 0.6s ease; }
.ph-bt { padding-left: 4.25rem; padding-right: 4.25rem; }
.pv-bt { padding-top: .75rem; padding-bottom: .75rem; }
.h-maxcontent { height: max-content; }
.mw-banner { max-width: 56.25rem; }

// Tachyons custom responsive classes

// Small screens
@media screen and (max-width: 30em) {
  .contact-pd { padding: .75rem 7.65rem; }
  .footer-bt{ padding: .75rem 5.6rem; }
  .mr-3-s { margin-right: 3rem; }
  .f-small-s { font-size: .6rem; }
  .f4-s { font-size: 1.5rem; }
  .h40-s { height: 40rem; }
  .h-menu-s { height: 6rem; }
  .w-logo { width: 10rem; }
  .pv-4-m { padding-bottom: 1.6rem; padding-top: 1.6rem; }
  .w90-s { width: 90%; }
  .fheader-s { font-size: 4.5rem; }
  .cover-s { background-size: cover; }
  .shadow-menu { box-shadow: 0 8px 6px -6px $shadowblack; }
  .w-100-s { width: 100%; }
  .asap-bg-s { background-image: url('../../images/bg-asap-mobile.png'); height: 25rem; }
  .nt-menu { margin-top: -.125rem; }
  .tracked-1 { letter-spacing: .06rem; }
  .w-products { width: 20rem; }
  .f-title-s { font-size: 2rem; }
  .banner-height { height: 12.5rem; }
}
//medium resolutions
@media screen and (min-width: 30em) and (max-width: 60em) {
  .nt-menu { margin-top: -.125rem; }
  .two-columns-m { column-count: 2; }
  .mr-5-m { margin-right: 4rem; }
  .f-title-m { font-size: 2rem; }
  .w100-m { width: 100%; }
  .pv-3-m { padding-bottom: 1.3rem; padding-top: 1.3rem; }
  .pv-4-m { padding-bottom: 1.6rem; padding-top: 1.6rem; }
  .w-logo { width: 10rem; }
  .coverm { background-size: cover; }
  .w-products { width: 20rem; }
}

//Large screens
@media screen and (min-width: 60em) {
  .h-28em-l { height: 28em; }
  .h-banner-l { height: 20em; }
  .three-columns-l { column-count: 3; }
  .hover-white-l { &:hover { color: $white; }}
  .new-banner { width: 40em; }
  .mr-13-l { margin-right: 13rem; }
  .f-title-l { font-size: 2rem; }
  .h50-l { height: 50rem; }
  .w-45-l { width: 45%; }
  .w-50-l { width: 50%; }
  .h-menu { height: 9rem; }
  .fheader-l { font-size: 9.5vw; }
  .bg-banner-sz { background-size: 100% 100%; }
  .w-15-l { width: 15%; }
  .w40-l { width: 40rem; }
  .mt-6-l { margin-top: .6rem; }
  .nl-3 { margin-left: -3rem; }
  .mv-menu { margin-top: 1.875rem; margin-bottom: 1.875rem; }
  .w36-l{ width: 36rem; }
}

//Very large screens
@media screen and (min-width: 120em) {
  .fheader-vl { font-size: 10rem; }
  .new-banner { width: 40em; }
}
// End Tachyons

// How continuous hacking works section
@keyframes fadein {
  from { opacity: 0; }
  to { opacity: 1; }
}

//scss-lint:disable IdSelector
#op1:checked~.index1 {
  color: $fluid-black;
  font-size: 1.25rem;
  font-weight: 400;
  margin-left: -.5rem;
  transition: .25s;

  .line-menu {
    animation: fadein .7s;
    display: block;
    float: left;
  }
}

//scss-lint:disable IdSelector
#op2:checked~.index2 {
  color: $fluid-black;
  font-size: 1.25rem;
  font-weight: 400;
  margin-left: -.5rem;
  transition: .25s;

  .line-menu {
    animation: fadein .7s;
    display: block;
    float: left;
  }
}

//scss-lint:disable IdSelector
#op3:checked~.index3 {
  color: $fluid-black;
  font-size: 1.25rem;
  font-weight: 400;
  margin-left: -.5rem;
  transition: .25s;

  .line-menu {
    animation: fadein .7s;
    display: block;
    float: left;
  }
}

#op5:checked~.index5 {
  border-bottom: .125rem solid $fluid-black;
  color: $fluid-black;
  padding-bottom: .2rem;
  transition: .25s;
}

#op6:checked~.index6 {
  border-bottom: .125rem solid $fluid-black;
  color: $fluid-black;
  padding-bottom: .2rem;
  transition: .25s;
}

// New menu component

.lower~.overlay-hugeinc {
  opacity: 0;
  transition: opacity .5s, visibility 0s .5s;
  visibility: hidden;
}

//scss-lint:disable IdSelector
#op:checked~.overlay-hugeinc {
  opacity: 1;
  transition: opacity .5s;
  visibility: visible;
}

//scss-lint:disable IdSelector MergeableSelector
#op:checked~.overlay-hugeinc nav ul {
  opacity: 1;
  transform: rotateX(0deg);
}

//scss-lint:disable IdSelector MergeableSelector
#op:not(:checked)~.overlay-hugeinc nav ul {
  transform: translateY(25%) rotateX(-35deg);
}

.carousel.active {
  cursor: grabbing;
}

.carousel::-webkit-scrollbar {
  width: 12px;
}

.carousel::-webkit-scrollbar-track {
  display: none;
}

.carousel::-webkit-scrollbar-thumb {
  display: none;
}

// Carousel for the Trusted by section

@keyframes scroll {
  0% { transform: translateX(0); }
  100% { transform: translateX(calc(-200px * 9)); }
}
.customer-carousel { animation: scroll 40s linear infinite;
  display: flex;
  width: calc(200px * 18);
}

.active-slide,
.dot:hover {
  background-color: $button-hover
}

.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

.menu-careers::-webkit-scrollbar-track {
  display: none;
}

.menu-careers::-webkit-scrollbar-thumb {
  display: none;
}

.menu-careers::-webkit-scrollbar {
  width: 12px;
}
/* ... */

